[gd_scene load_steps=3 format=3 uid="uid://dewhdphifjt15"]

[ext_resource type="Script" uid="uid://cv2owqer2ekyg" path="res://addons/GD-Sync/UI/Messages/ToastMessage.gd" id="1_2ijdd"]
[ext_resource type="Theme" uid="uid://5whm1igkt23h" path="res://addons/GD-Sync/UI/ConfigMenu/GD-Theme.tres" id="1_nql3a"]

[node name="ToastMessage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_nql3a")
script = ExtResource("1_2ijdd")

[node name="Anchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="Label" type="RichTextLabel" parent="Anchor"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -553.0
offset_top = -66.0
offset_right = -13.880005
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"MessageLabel"
bbcode_enabled = true
text = "Epic cool message!"
fit_content = true

[connection signal="meta_clicked" from="Anchor/Label" to="." method="_on_label_meta_clicked"]
[connection signal="mouse_entered" from="Anchor/Label" to="." method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="Anchor/Label" to="." method="_on_label_mouse_exited"]
